<resources>
    <string name="label_app_name">PepRally</string>
    <string name="label_app_version">v1.0.8</string>
    <string name="label_app_name_version">PepRally v1.0.8</string>
    <string name="label_app_full_version">Version 1.0.8 - UT BETA</string>
    <string name="label_app_location">Made in Austin, TX</string>
    <string name="label_app_facebook_link">https://www.facebook.com/peprallyapp</string>
    <string name="label_app_instagram_link">http://instagram.com/peprallyapp</string>
    <string name="label_app_twitter_link">763241237243580416</string>
    <string name="activity_label_new_post">New Post</string>
    <string name="activity_label_new_comment">Comments</string>
    <string name="activity_label_notifications">Notifications</string>
    <string name="activity_label_fav_team">Browse Teams</string>
    <string name="activity_label_view_fistbumps">Fistbumps</string>
    <string name="activity_label_conversations">Messages</string>
    <string name="activity_label_messaging">Chat</string>
    <string name="activity_label_settings">Settings</string>
    <string name="team_slogan">Hook\'em Horns</string>

    <!-- Strings related to Login Activity -->
    <string name="facebook_app_id">1006674646058120</string>
    <string name="dialog_username_text">Pick a unique username!</string>
    <string name="spinner_prompt_text">Choose your school and campus:</string>
    <string name="school_name_prompt_text">Choose your school and campus</string>
    <string name="school_name_ut_austin">University of Texas - Austin</string>
    <string name="school_name_texas_state">Texas State University</string>
    <string-array name="schools_array">
        <item>@string/school_name_prompt_text</item>
        <item>@string/school_name_ut_austin</item>
        <!--<item>@string/school_name_texas_state</item>-->
    </string-array>

    <string name="school_title_ut_austin">UT Austin</string>



    <!-- Strings related to Profile Activity -->
    <string name="profile_fist_bumps"> Fistbumps</string>
    <string name="profile_posts"> posts</string>
    <string name="fistbumps_received"> received</string>
    <string name="fistbumps_sent"> sent</string>
    <string name="profile_btn_follow">+ Follow</string>
    <string name="profile_follow_text">Follow</string>
    <string name="profile_following_text">+ Follow</string>
    <string name="profile_send_fistbump_text">SEND FISTBUMP</string>
    <string name="profile_fistbumped_text">FISTBUMPED</string>
    <string name="profile_fistbump_sent">Fistbump sent to </string>
    <string name="profile_already_fistbumped">Fistbump already sent to</string>

    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_activity_events">EventsActivity</string>
    <string name="title_activity_browse_teams">BrowseTeamsActivity</string>
    <string name="title_activity_trending">TrendingActivity</string>
    <string name="title_activity_settings">Settings</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="invalid_characters_message">Username cannot contain special characters or spaces. Letters, numbers and underscores only.</string>
    <string name="no_peprally_account_message">has not made a PepRally profile yet. Tell your friends about PepRally!</string>
    <string name="no_posts_message">You have not created any posts yet!</string>
    <string name="no_comments_message">No comments.</string>
    <string name="dialog_delete_message">Delete comment</string>

    <!-- Default Profile Content Strings -->
    <string name="default_firstname"><i>NAME, AGE</i></string>
    <string name="default_username"><i>Must pick a username!</i></string>
    <string name="default_fav_team"><i>Pick your favorite team!</i></string>
    <string name="default_fav_player"><i>Pick your favorite player!</i></string>
    <string name="default_pep_talk"><i>Team needs you, let\'s hear it!</i></string>
    <string name="default_trash_talk"><i>Let em\' know what\'s up!</i></string>

    <string name="default_post_question_1"><i>What\'s on your mind?</i></string>
    <string name="default_post_question_2"><i>Share something new you learned today!</i></string>
    <string name="default_post_question_3"><i>What\'s your go-to one liner?</i></string>
    <string name="default_post_question_5"><i>Someone is probably having a bad day, say something to cheer them up!</i></string>
    <string name="default_post_question_4"><i>What are you looking forward to?</i></string>

    <string name="example_text">This is a sample post message to see what the view would
        look like on a card. This sentence has no meaning, it\'s a waste of time to read it. Okay thanks bye.</string>

    <!-- Notification content placeholders -->
    <string name="notification_0_placeholder">direct fistbumped you.</string>
    <string name="notification_1_placeholder">sent you a message.</string>
    <string name="notification_2_placeholder">commented: \""</string>
    <string name="notification_3_placeholder">fistbumped your post.</string>
    <string name="notification_4_placeholder">fistbumped your comment.</string>
    <string name="notification_5_placeholder">fistbumped you back. It\'s a match!</string>

    <!-- Error Message Strings -->
    <string name="no_connection_text">Uh oh! Looks like you\'ve lost internet connection. Please check your
        connection settings and try re-opening PepRally.</string>

    <!-- Content Description Strings -->
    <string name="content_description_image_view">Image View</string>
    <string name="content_description_image_button">Image Button</string>

    <!-- Place holders -->
    <string name="new_post_char_text">200</string>
    <string name="new_post_button_text">Post</string>
    <string name="placeholder_username">username</string>
    <string name="placeholder_post_time">time</string>
    <string name="placeholder_post_fistbumps_count">0</string>
    <string name="placeholder_profile_text_age">NAME, AGE</string>
    <string name="placeholder_favorite_team">Favorite Team</string>
    <string name="placeholder_favorite_player">Favorite Player</string>
    <string name="placeholder_content">Content</string>
    <string name="placeholder_pep_talk">Best Pep Talk</string>
    <string name="placeholder_trash_talk">Best Trash Talk</string>
    <string name="placeholder_sample_text">some sample text</string>
    <string name="placeholder_first_name">First Name</string>
    <string name="placeholder_view_profile">View Profile</string>
    <string name="placeholder_edit_profile">EDIT PROFILE</string>
    <string name="placeholder_editing_profile">EDITING PROFILE&#8230;</string>
    <string name="placeholder_notifications">Notifications</string>
    <string name="placeholder_messages">Messages</string>
    <string name="placeholder_no_notifications">No new notifications.</string>
    <string name="placeholder_no_messages">No messages yet. Give someone a fistbump!</string>
    <string name="placeholder_nothing_trending">Make a post! :)</string>
    <string name="placeholder_logout">Logout</string>
    <string name="placeholder_delete_profile">Delete Profile</string>
    <string name="placeholder_fistbump_match_send_message">Send a message</string>
    <string name="placeholder_fistbump_match_go_back">Go back</string>
    <string name="placeholder_messaging_hint">Send a message&#8230;</string>
    <string name="placeholder_comment_hint">Leave a comment&#8230;</string>
    <string name="placeholder_school">School</string>
    <string name="placeholder_fistbump_match_title">It\'s a fistbump!</string>
    <string name="placeholder_menu_delete">Delete</string>
    <string name="placeholder_menu_unselect">Unselect</string>

    <!-- Strings related to Settings/Preferences -->

    <!-- Non-setting preferences -->
    <string name="pref_key_school_network">pref_key_school_network</string>

    <!-- Main setting groups-->
    <string name="pref_group_my_account">MY ACCOUNT</string>
    <string name="pref_group_support">SUPPORT</string>
    <string name="pref_group_show_us_love">SUPPORT US &lt;3</string>

    <!-- My Account Settings -->
    <string name="pref_my_account_name">Name</string>
    <string name="pref_my_account_username">Username</string>
    <string name="pref_my_account_school">School Network</string>
    <string name="pref_my_account_date_joined">Date Joined</string>
    <string name="pref_my_account_email">Email</string>
    <string name="pref_my_account_email_summary">Let us keep you updated!</string>
    <string name="pref_my_account_email_invalid_msg">Email not updated, please enter a valid email!</string>
    <string name="pref_my_account_notifications">Notification Settings</string>
    <string name="pref_notifications_direct_fistbump">Direct fistbump notification</string>
    <string name="pref_notifications_post_fistbump">Post fistbump notification</string>
    <string name="pref_notifications_comment_fistbump">Comment fistbump notification</string>
    <string name="pref_notifications_new_comment">New comment notification</string>
    <string name="pref_notifications_direct_message">New message notification</string>
    <string name="pref_notifications_fistbump_match">Fistbump match notification</string>
    <string name="pref_notifications_pref_saved">Notification preferences saved!</string>

    <!-- Support Settings -->
    <string name="pref_support_faq">FAQ</string>
    <string name="pref_support_privacy_policy">Privacy Policy</string>
    <string name="pref_support_delete_account">Delete Account</string>
    <string name="pref_delete_account_confirmation">Are you sure you want to delete your account?</string>
    <string name="pref_delete_account_feedback_hint"><i>Tell us why you\'re leaving so we can get some closure? :\'(</i></string>

    <!-- Show us love Settings -->
    <string name="pref_show_love_feedback">Give us feedback or ask us a question!</string>
    <string name="pref_show_love_rate_us">Rate PepRally</string>
    <string name="pref_show_love_facebook">Facebook</string>
    <string name="pref_show_love_instagram">IG</string>
    <string name="pref_show_love_twitter">Twitter</string>
    <string name="pref_feedback">We want to hear your thoughts!</string>
    <string name="pref_feedback_msg"><i>We\'d love to know what you like or dislike about PepRally and what we can improve on!</i></string>


</resources>
