<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/id_container_profile_header"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_vertical_margin"
    android:orientation="horizontal"
    android:background="@color/colorPrimaryDark"
    android:layout_marginTop="?attr/actionBarSize">
    <ImageView
        android:id="@+id/id_image_view_profile_image"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_gravity="start"
        android:background="@color/colorBackground"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:contentDescription="@string/content_description_image_view"/>
    <LinearLayout
        android:id="@+id/profile_header_info"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="top|center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/id_fistbumps"
            android:drawableEnd="@drawable/ic_fistbumps"
            android:drawableRight="@drawable/ic_fistbumps"
            android:drawablePadding="4dp"
            android:text="@string/profile_fist_bumps"
            android:gravity="center_vertical"
            android:textColor="@color/colorWhite"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:paddingTop="8dp"
            android:paddingBottom="8dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/id_fistbumps_sent"
                android:text="@string/fistbumps_sent"
                android:textColor="@color/colorWhite"/>
            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/colorWhite"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/id_fistbumps_received"
                android:text="@string/fistbumps_received"
                android:textColor="@color/colorWhite"/>

        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/id_profile_posts_count"
            android:paddingTop="4dp"
            android:paddingBottom="8dp"
            android:drawablePadding="4dp"
            android:gravity="center"
            android:text="@string/profile_posts"
            android:textColor="@color/colorWhite" />
        <LinearLayout
            android:id="@+id/id_button_edit_profile_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:background="@drawable/button_follow"
            android:padding="4dp"
            android:clickable="true"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin">
            <TextView
                android:id="@+id/id_button_edit_profile_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableRight="@drawable/ic_edit"
                android:drawableEnd="@drawable/ic_edit"
                android:text="@string/placeholder_edit_profile"
                android:textSize="12sp"
                android:drawablePadding="8dp"
                android:textColor="@color/colorPrimary"
                android:gravity="center" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>