<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/id_card_view_new_comment"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="2dp">
    <LinearLayout
        android:id="@+id/id_container_new_comment_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:minHeight="90dp"
        android:layout_margin="8dp">
        <RelativeLayout
            android:id="@+id/id_container_comment_profile_pic_time_stamp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/id_image_view_comment_profile"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:clickable="true"
                android:src="@drawable/img_default_profile"
                app:srcCompat="@drawable/img_default_profile"
                android:contentDescription="@string/content_description_image_view"/>
            <TextView
                android:id="@+id/id_text_view_comment_time_stamp"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:gravity="center"
                android:text="@string/placeholder_post_time"
                android:textStyle="bold"
                android:textSize="12sp"
                android:textColor="@color/colorPrimaryDark" />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/id_container_comment_clickable"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp">
            <TextView
                android:id="@+id/id_text_view_comment_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textStyle="italic"
                android:text="@string/placeholder_username">
            </TextView>
            <TextView
                android:id="@+id/id_text_view_comment_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/id_text_view_comment_username"
                android:text="@string/example_text"
                android:textColor="@android:color/black">
            </TextView>
        </RelativeLayout>
        <LinearLayout
            android:id="@+id/id_button_comment_card_fistbump"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">
            <TextView
                android:id="@+id/id_button_comment_fistbump"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleX="0.6"
                android:scaleY="0.6"
                android:drawableEnd="@drawable/ic_fistbump_50"
                android:drawableRight="@drawable/ic_fistbump_50"
                android:clickable="true" />
            <TextView
                android:id="@+id/id_text_view_comment_fistbumps_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placeholder_post_fistbumps_count"
                android:clickable="true"/>
        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>