<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/id_card_view_fistbumped_users"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="2dp"
    android:clickable="true">
    <LinearLayout
        android:id="@+id/id_recycler_view_container_fistbumped_users"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="64dp"
        android:orientation="horizontal"
        android:padding="8dp">
        <ImageView
            android:id="@+id/id_fistbumped_users_card_profile_photo"
            app:srcCompat="@drawable/img_default_profile"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/content_description_image_view"/>
        <LinearLayout
            android:id="@+id/id_fistbumped_users_card_clickable"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:gravity="center_vertical">
            <TextView
                android:id="@+id/id_fistbumped_users_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placeholder_username"
                android:textSize="12sp"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/id_fistbumped_users_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placeholder_first_name"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>